Python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> cmds
Rule 2     cmds -> cmd cmds
Rule 3     cmds -> cmd
Rule 4     cmd -> atribuicao
Rule 5     cmd -> impressao
Rule 6     cmd -> operacao
Rule 7     cmd -> repeticao
Rule 8     atribuicao -> FACA VAR SER NUM PONTO
Rule 9     impressao -> MOSTRE VAR PONTO
Rule 10    impressao -> MOSTRE operacao PONTO
Rule 11    operacao -> SOME VAR COM VAR PONTO
Rule 12    operacao -> SOME VAR COM NUM PONTO
Rule 13    operacao -> SOME NUM COM VAR PONTO
Rule 14    operacao -> SOME NUM COM NUM PONTO
Rule 15    cmd -> MULTIPLIQUE VAR POR VAR PONTO
Rule 16    cmd -> MULTIPLIQUE VAR POR NUM PONTO
Rule 17    cmd -> MULTIPLIQUE NUM POR VAR PONTO
Rule 18    cmd -> MULTIPLIQUE NUM POR NUM PONTO
Rule 19    repeticao -> REPITA NUM VEZES DOIS_PONTOS cmds FIM
Rule 20    cmd -> SE VAR ENTAO cmds FIM
Rule 21    cmd -> SE VAR ENTAO cmds FIM PONTO
Rule 22    cmd -> SE VAR ENTAO cmd FIM PONTO
Rule 23    cmd -> SE VAR ENTAO cmd SENAO cmd FIM PONTO
Rule 24    cmd -> SE VAR ENTAO cmds SENAO cmds FIM
Rule 25    cmd -> SE VAR ENTAO cmds SENAO cmds FIM PONTO

Terminals, with rules where they appear

COM                  : 11 12 13 14
DOIS_PONTOS          : 19
ENTAO                : 20 21 22 23 24 25
FACA                 : 8
FIM                  : 19 20 21 22 23 24 25
MOSTRE               : 9 10
MULTIPLIQUE          : 15 16 17 18
NUM                  : 8 12 13 14 14 16 17 18 18 19
PONTO                : 8 9 10 11 12 13 14 15 16 17 18 21 22 23 25
POR                  : 15 16 17 18
REPITA               : 19
SE                   : 20 21 22 23 24 25
SENAO                : 23 24 25
SER                  : 8
SOME                 : 11 12 13 14
VAR                  : 8 9 11 11 12 13 15 15 16 17 20 21 22 23 24 25
VEZES                : 19
error                : 

Nonterminals, with rules where they appear

atribuicao           : 4
cmd                  : 2 3 22 23 23
cmds                 : 1 2 19 20 21 24 24 25 25
impressao            : 5
operacao             : 6 10
programa             : 0
repeticao            : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . cmds
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

    programa                       shift and go to state 1
    cmds                           shift and go to state 2
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> cmds .

    $end            reduce using rule 1 (programa -> cmds .)


state 3

    (2) cmds -> cmd . cmds
    (3) cmds -> cmd .
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

    $end            reduce using rule 3 (cmds -> cmd .)
    FIM             reduce using rule 3 (cmds -> cmd .)
    SENAO           reduce using rule 3 (cmds -> cmd .)
    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

    cmd                            shift and go to state 3
    cmds                           shift and go to state 14
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 4

    (4) cmd -> atribuicao .

    MULTIPLIQUE     reduce using rule 4 (cmd -> atribuicao .)
    SE              reduce using rule 4 (cmd -> atribuicao .)
    FACA            reduce using rule 4 (cmd -> atribuicao .)
    MOSTRE          reduce using rule 4 (cmd -> atribuicao .)
    SOME            reduce using rule 4 (cmd -> atribuicao .)
    REPITA          reduce using rule 4 (cmd -> atribuicao .)
    $end            reduce using rule 4 (cmd -> atribuicao .)
    FIM             reduce using rule 4 (cmd -> atribuicao .)
    SENAO           reduce using rule 4 (cmd -> atribuicao .)


state 5

    (5) cmd -> impressao .

    MULTIPLIQUE     reduce using rule 5 (cmd -> impressao .)
    SE              reduce using rule 5 (cmd -> impressao .)
    FACA            reduce using rule 5 (cmd -> impressao .)
    MOSTRE          reduce using rule 5 (cmd -> impressao .)
    SOME            reduce using rule 5 (cmd -> impressao .)
    REPITA          reduce using rule 5 (cmd -> impressao .)
    $end            reduce using rule 5 (cmd -> impressao .)
    FIM             reduce using rule 5 (cmd -> impressao .)
    SENAO           reduce using rule 5 (cmd -> impressao .)


state 6

    (6) cmd -> operacao .

    MULTIPLIQUE     reduce using rule 6 (cmd -> operacao .)
    SE              reduce using rule 6 (cmd -> operacao .)
    FACA            reduce using rule 6 (cmd -> operacao .)
    MOSTRE          reduce using rule 6 (cmd -> operacao .)
    SOME            reduce using rule 6 (cmd -> operacao .)
    REPITA          reduce using rule 6 (cmd -> operacao .)
    $end            reduce using rule 6 (cmd -> operacao .)
    FIM             reduce using rule 6 (cmd -> operacao .)
    SENAO           reduce using rule 6 (cmd -> operacao .)


state 7

    (7) cmd -> repeticao .

    MULTIPLIQUE     reduce using rule 7 (cmd -> repeticao .)
    SE              reduce using rule 7 (cmd -> repeticao .)
    FACA            reduce using rule 7 (cmd -> repeticao .)
    MOSTRE          reduce using rule 7 (cmd -> repeticao .)
    SOME            reduce using rule 7 (cmd -> repeticao .)
    REPITA          reduce using rule 7 (cmd -> repeticao .)
    $end            reduce using rule 7 (cmd -> repeticao .)
    FIM             reduce using rule 7 (cmd -> repeticao .)
    SENAO           reduce using rule 7 (cmd -> repeticao .)


state 8

    (15) cmd -> MULTIPLIQUE . VAR POR VAR PONTO
    (16) cmd -> MULTIPLIQUE . VAR POR NUM PONTO
    (17) cmd -> MULTIPLIQUE . NUM POR VAR PONTO
    (18) cmd -> MULTIPLIQUE . NUM POR NUM PONTO

    VAR             shift and go to state 15
    NUM             shift and go to state 16


state 9

    (20) cmd -> SE . VAR ENTAO cmds FIM
    (21) cmd -> SE . VAR ENTAO cmds FIM PONTO
    (22) cmd -> SE . VAR ENTAO cmd FIM PONTO
    (23) cmd -> SE . VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> SE . VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> SE . VAR ENTAO cmds SENAO cmds FIM PONTO

    VAR             shift and go to state 17


state 10

    (8) atribuicao -> FACA . VAR SER NUM PONTO

    VAR             shift and go to state 18


state 11

    (9) impressao -> MOSTRE . VAR PONTO
    (10) impressao -> MOSTRE . operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO

    VAR             shift and go to state 19
    SOME            shift and go to state 12

    operacao                       shift and go to state 20

state 12

    (11) operacao -> SOME . VAR COM VAR PONTO
    (12) operacao -> SOME . VAR COM NUM PONTO
    (13) operacao -> SOME . NUM COM VAR PONTO
    (14) operacao -> SOME . NUM COM NUM PONTO

    VAR             shift and go to state 21
    NUM             shift and go to state 22


state 13

    (19) repeticao -> REPITA . NUM VEZES DOIS_PONTOS cmds FIM

    NUM             shift and go to state 23


state 14

    (2) cmds -> cmd cmds .

    $end            reduce using rule 2 (cmds -> cmd cmds .)
    FIM             reduce using rule 2 (cmds -> cmd cmds .)
    SENAO           reduce using rule 2 (cmds -> cmd cmds .)


state 15

    (15) cmd -> MULTIPLIQUE VAR . POR VAR PONTO
    (16) cmd -> MULTIPLIQUE VAR . POR NUM PONTO

    POR             shift and go to state 24


state 16

    (17) cmd -> MULTIPLIQUE NUM . POR VAR PONTO
    (18) cmd -> MULTIPLIQUE NUM . POR NUM PONTO

    POR             shift and go to state 25


state 17

    (20) cmd -> SE VAR . ENTAO cmds FIM
    (21) cmd -> SE VAR . ENTAO cmds FIM PONTO
    (22) cmd -> SE VAR . ENTAO cmd FIM PONTO
    (23) cmd -> SE VAR . ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> SE VAR . ENTAO cmds SENAO cmds FIM
    (25) cmd -> SE VAR . ENTAO cmds SENAO cmds FIM PONTO

    ENTAO           shift and go to state 26


state 18

    (8) atribuicao -> FACA VAR . SER NUM PONTO

    SER             shift and go to state 27


state 19

    (9) impressao -> MOSTRE VAR . PONTO

    PONTO           shift and go to state 28


state 20

    (10) impressao -> MOSTRE operacao . PONTO

    PONTO           shift and go to state 29


state 21

    (11) operacao -> SOME VAR . COM VAR PONTO
    (12) operacao -> SOME VAR . COM NUM PONTO

    COM             shift and go to state 30


state 22

    (13) operacao -> SOME NUM . COM VAR PONTO
    (14) operacao -> SOME NUM . COM NUM PONTO

    COM             shift and go to state 31


state 23

    (19) repeticao -> REPITA NUM . VEZES DOIS_PONTOS cmds FIM

    VEZES           shift and go to state 32


state 24

    (15) cmd -> MULTIPLIQUE VAR POR . VAR PONTO
    (16) cmd -> MULTIPLIQUE VAR POR . NUM PONTO

    VAR             shift and go to state 33
    NUM             shift and go to state 34


state 25

    (17) cmd -> MULTIPLIQUE NUM POR . VAR PONTO
    (18) cmd -> MULTIPLIQUE NUM POR . NUM PONTO

    VAR             shift and go to state 36
    NUM             shift and go to state 35


state 26

    (20) cmd -> SE VAR ENTAO . cmds FIM
    (21) cmd -> SE VAR ENTAO . cmds FIM PONTO
    (22) cmd -> SE VAR ENTAO . cmd FIM PONTO
    (23) cmd -> SE VAR ENTAO . cmd SENAO cmd FIM PONTO
    (24) cmd -> SE VAR ENTAO . cmds SENAO cmds FIM
    (25) cmd -> SE VAR ENTAO . cmds SENAO cmds FIM PONTO
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

    cmds                           shift and go to state 37
    cmd                            shift and go to state 38
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 27

    (8) atribuicao -> FACA VAR SER . NUM PONTO

    NUM             shift and go to state 39


state 28

    (9) impressao -> MOSTRE VAR PONTO .

    MULTIPLIQUE     reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    SE              reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    FACA            reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    MOSTRE          reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    SOME            reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    REPITA          reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    $end            reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    FIM             reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)
    SENAO           reduce using rule 9 (impressao -> MOSTRE VAR PONTO .)


state 29

    (10) impressao -> MOSTRE operacao PONTO .

    MULTIPLIQUE     reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    SE              reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    FACA            reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    MOSTRE          reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    SOME            reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    REPITA          reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    $end            reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    FIM             reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)
    SENAO           reduce using rule 10 (impressao -> MOSTRE operacao PONTO .)


state 30

    (11) operacao -> SOME VAR COM . VAR PONTO
    (12) operacao -> SOME VAR COM . NUM PONTO

    VAR             shift and go to state 40
    NUM             shift and go to state 41


state 31

    (13) operacao -> SOME NUM COM . VAR PONTO
    (14) operacao -> SOME NUM COM . NUM PONTO

    VAR             shift and go to state 43
    NUM             shift and go to state 42


state 32

    (19) repeticao -> REPITA NUM VEZES . DOIS_PONTOS cmds FIM

    DOIS_PONTOS     shift and go to state 44


state 33

    (15) cmd -> MULTIPLIQUE VAR POR VAR . PONTO

    PONTO           shift and go to state 45


state 34

    (16) cmd -> MULTIPLIQUE VAR POR NUM . PONTO

    PONTO           shift and go to state 46


state 35

    (18) cmd -> MULTIPLIQUE NUM POR NUM . PONTO

    PONTO           shift and go to state 47


state 36

    (17) cmd -> MULTIPLIQUE NUM POR VAR . PONTO

    PONTO           shift and go to state 48


state 37

    (20) cmd -> SE VAR ENTAO cmds . FIM
    (21) cmd -> SE VAR ENTAO cmds . FIM PONTO
    (24) cmd -> SE VAR ENTAO cmds . SENAO cmds FIM
    (25) cmd -> SE VAR ENTAO cmds . SENAO cmds FIM PONTO

    FIM             shift and go to state 49
    SENAO           shift and go to state 50


state 38

    (22) cmd -> SE VAR ENTAO cmd . FIM PONTO
    (23) cmd -> SE VAR ENTAO cmd . SENAO cmd FIM PONTO
    (2) cmds -> cmd . cmds
    (3) cmds -> cmd .
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

  ! shift/reduce conflict for FIM resolved as shift
  ! shift/reduce conflict for SENAO resolved as shift
    FIM             shift and go to state 51
    SENAO           shift and go to state 52
    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

  ! FIM             [ reduce using rule 3 (cmds -> cmd .) ]
  ! SENAO           [ reduce using rule 3 (cmds -> cmd .) ]

    cmd                            shift and go to state 3
    cmds                           shift and go to state 14
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 39

    (8) atribuicao -> FACA VAR SER NUM . PONTO

    PONTO           shift and go to state 53


state 40

    (11) operacao -> SOME VAR COM VAR . PONTO

    PONTO           shift and go to state 54


state 41

    (12) operacao -> SOME VAR COM NUM . PONTO

    PONTO           shift and go to state 55


state 42

    (14) operacao -> SOME NUM COM NUM . PONTO

    PONTO           shift and go to state 56


state 43

    (13) operacao -> SOME NUM COM VAR . PONTO

    PONTO           shift and go to state 57


state 44

    (19) repeticao -> REPITA NUM VEZES DOIS_PONTOS . cmds FIM
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

    cmds                           shift and go to state 58
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 45

    (15) cmd -> MULTIPLIQUE VAR POR VAR PONTO .

    MULTIPLIQUE     reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    SE              reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    FACA            reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    MOSTRE          reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    SOME            reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    REPITA          reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    $end            reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    FIM             reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)
    SENAO           reduce using rule 15 (cmd -> MULTIPLIQUE VAR POR VAR PONTO .)


state 46

    (16) cmd -> MULTIPLIQUE VAR POR NUM PONTO .

    MULTIPLIQUE     reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    SE              reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    FACA            reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    MOSTRE          reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    SOME            reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    REPITA          reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    $end            reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    FIM             reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)
    SENAO           reduce using rule 16 (cmd -> MULTIPLIQUE VAR POR NUM PONTO .)


state 47

    (18) cmd -> MULTIPLIQUE NUM POR NUM PONTO .

    MULTIPLIQUE     reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    SE              reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    FACA            reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    MOSTRE          reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    SOME            reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    REPITA          reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    $end            reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    FIM             reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)
    SENAO           reduce using rule 18 (cmd -> MULTIPLIQUE NUM POR NUM PONTO .)


state 48

    (17) cmd -> MULTIPLIQUE NUM POR VAR PONTO .

    MULTIPLIQUE     reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    SE              reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    FACA            reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    MOSTRE          reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    SOME            reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    REPITA          reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    $end            reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    FIM             reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)
    SENAO           reduce using rule 17 (cmd -> MULTIPLIQUE NUM POR VAR PONTO .)


state 49

    (20) cmd -> SE VAR ENTAO cmds FIM .
    (21) cmd -> SE VAR ENTAO cmds FIM . PONTO

    MULTIPLIQUE     reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    SE              reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    FACA            reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    MOSTRE          reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    SOME            reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    REPITA          reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    $end            reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    FIM             reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    SENAO           reduce using rule 20 (cmd -> SE VAR ENTAO cmds FIM .)
    PONTO           shift and go to state 59


state 50

    (24) cmd -> SE VAR ENTAO cmds SENAO . cmds FIM
    (25) cmd -> SE VAR ENTAO cmds SENAO . cmds FIM PONTO
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

    cmds                           shift and go to state 60
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 51

    (22) cmd -> SE VAR ENTAO cmd FIM . PONTO

    PONTO           shift and go to state 61


state 52

    (23) cmd -> SE VAR ENTAO cmd SENAO . cmd FIM PONTO
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (15) cmd -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) cmd -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) cmd -> . MULTIPLIQUE NUM POR VAR PONTO
    (18) cmd -> . MULTIPLIQUE NUM POR NUM PONTO
    (20) cmd -> . SE VAR ENTAO cmds FIM
    (21) cmd -> . SE VAR ENTAO cmds FIM PONTO
    (22) cmd -> . SE VAR ENTAO cmd FIM PONTO
    (23) cmd -> . SE VAR ENTAO cmd SENAO cmd FIM PONTO
    (24) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM
    (25) cmd -> . SE VAR ENTAO cmds SENAO cmds FIM PONTO
    (8) atribuicao -> . FACA VAR SER NUM PONTO
    (9) impressao -> . MOSTRE VAR PONTO
    (10) impressao -> . MOSTRE operacao PONTO
    (11) operacao -> . SOME VAR COM VAR PONTO
    (12) operacao -> . SOME VAR COM NUM PONTO
    (13) operacao -> . SOME NUM COM VAR PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (19) repeticao -> . REPITA NUM VEZES DOIS_PONTOS cmds FIM

    MULTIPLIQUE     shift and go to state 8
    SE              shift and go to state 9
    FACA            shift and go to state 10
    MOSTRE          shift and go to state 11
    SOME            shift and go to state 12
    REPITA          shift and go to state 13

    cmd                            shift and go to state 62
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7

state 53
